# voice-synth-test

./: README.md  app.py  pyproject.toml  test_app.py
simulacrum/: package-lock.json  package.json
simulacrum/src/: App.css  App.js  index.css
